--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
 
     <com.transferwise.sequencelayout.SequenceLayout
         android:id="@+id/sequenceLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="500dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="32dp"
         android:minWidth="250dp"
         app:layout_constraintBottom_toTopOf="@+id/next"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,8 +33,8 @@
             android:id="@+id/s2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:subtitle="Book a slot for Luggage Check-in"
             app:anchor="Today"
+            app:subtitle="Book a slot for Luggage Check-in"
             app:title="Luggage Check-in" />
 
         <com.transferwise.sequencelayout.SequenceStep
@@ -58,14 +58,11 @@
         android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="125dp"
         android:text="Book a Slot"
         android:textColor="@color/mi_text_color_primary_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sequenceLayout" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
